--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,11 @@ section {
     transition: background 0.1s ease-out;
     z-index: 9999; /* Asegura que esté en la capa superior */
 }
+.cart-frame {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    width: 100%;
+    height: 300px; /* Ajusta según el contenido */
+    display: block; /* Evita el pequeño espacio extra debajo del iframe */
+}
