--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <title>Pablo Garrido</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/carts.css">
     <script src="../js/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -36,19 +37,72 @@
     
     <!-- Contenido Principal -->
     <main class="content">
-        <section id="description">
-            <h2>Description</h2>
+        <section id="about">
+            <h2>About</h2>
             <p>Mechatronics Technician and Mechatronics Engineering student, currently focused on developing my skills, I am seeking to collaborate in teams and projects where I can provide tangible results.
 
                 I am a technology enthusiast and an organized professional, with an ability to adapt easily and a strong willingness to learn. I enjoy working in teams and providing support in any necessary task to make a meaningful contribution.</p>
         </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>Esta es la sección de información sobre mí.</p>
-        </section>
         <section id="experience">
             <h2>Experience</h2>
             <p>Aquí está mi experiencia laboral.</p>
+            <div class="experience-card">
+                <div class="experience-header">
+                    <span class="experience-date">2024 – PRESENT</span>
+                    <h3 class="experience-title">Data Business Analyst · <span class="experience-company">ALTEN</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                </div>
+                <p class="experience-description">
+                    Build and maintain critical components used to construct Klaviyo's
+                    frontend, across the whole product. Work closely with cross-
+                    functional teams, including developers, designers, and product
+                    managers, to implement and advocate for best practices in web
+                    accessibility.
+                </p>
+                <div class="experience-tech-stack">
+                    <span class="tech-badge">Power BI</span>
+                    <span class="tech-badge">Power Platform</span>
+                    <span class="tech-badge">Azure</span>
+                    <span class="tech-badge">Python</span>
+                </div>
+            </div>
+            <div class="experience-card">
+                <div class="experience-header">
+                    <span class="experience-date">2023 – 2024</span>
+                    <h3 class="experience-title">IT Infrastructure Operations Technician · <span class="experience-company">OP mobility</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                </div>
+                <p class="experience-description">
+                    SQL Database Administration
+                    Development of Reports in Power BI
+                    Configuration of Cisco Switches and Palo Alto Firewalls
+                    Operating System Installation and Migration to Windows 11
+                    Device Management using Intune, User and Permissions Management
+                </p>
+                <div class="experience-tech-stack">
+                    <span class="tech-badge">CISCO</span>
+                    <span class="tech-badge">SQL</span>
+                    <span class="tech-badge">POWER BI</span>
+                    <span class="tech-badge">Azure AD</span>
+                </div>
+            </div>
+            <div class="experience-card">
+                <div class="experience-header">
+                    <span class="experience-date">APR - SEP 2022</span>
+                    <h3 class="experience-title">Manufacturing Trainee <span class="experience-company">CERHAN - Audi Mexico</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                </div>
+                <p class="experience-description">
+                    Development of Skills for the Operation of KUKA Robotic Cells
+                    Preventive and Corrective Maintenance
+                    Programming of Siemens and Phoenix Contact PLCs
+                    Configuration of Network Devices
+                    Pneumatic Systems
+                    Application of Nelson Studs, Sealing with Dürr, Welding with Nimak
+                </p>
+                <div class="experience-tech-stack">
+                    <span class="tech-badge">SIEMENS</span>
+                    <span class="tech-badge">Phoenix Contact</span>
+                    <span class="tech-badge">KUKA Q3</span>
+                </div>
+            </div>
         </section>
         <section id="projects">
             <h2>Projects</h2>
