--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/carts.css">
+    <link rel="stylesheet" href="../css/about.css">
     <script src="../js/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -39,17 +40,17 @@
     <main class="content">
         <section id="about">
             <h2>About</h2>
-            <p>Mechatronics Technician and Mechatronics Engineering student, currently focused on developing my skills, I am seeking to collaborate in teams and projects where I can provide tangible results.
-
-                I am a technology enthusiast and an organized professional, with an ability to adapt easily and a strong willingness to learn. I enjoy working in teams and providing support in any necessary task to make a meaningful contribution.</p>
+            <p><strong>Mechatronics Technician</strong> and <strong>Mechatronics Engineering</strong> student, currently focused on developing my <strong>skills</strong>, I am seeking to <strong>collaborate</strong> in <strong>teams</strong> and <strong>projects</strong> where I can provide <strong>tangible results</strong>.</p>
+            <p>I am a <strong>technology enthusiast</strong> and an <strong>organized professional</strong>, with an ability to <strong>adapt easily</strong> and a <strong>strong willingness to learn</strong>. I enjoy <strong>working in teams</strong> and providing <strong>support</strong> in any necessary <strong>task</strong> to make a <strong>meaningful contribution</strong>.</p>
         </section>
         <section id="experience">
-            <h2>Experience</h2>
-            <p>Aquí está mi experiencia laboral.</p>
             <div class="experience-card">
                 <div class="experience-header">
                     <span class="experience-date">2024 – PRESENT</span>
-                    <h3 class="experience-title">Data Business Analyst · <span class="experience-company">ALTEN</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                    <div class="experience-info">
+                        <h3 class="experience-title">Data Business Analyst</h3>
+                        <span class="experience-company">ALTEN <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></span>
+                    </div>
                 </div>
                 <p class="experience-description">
                     Build and maintain critical components used to construct Klaviyo's
@@ -68,7 +69,10 @@
             <div class="experience-card">
                 <div class="experience-header">
                     <span class="experience-date">2023 – 2024</span>
-                    <h3 class="experience-title">IT Infrastructure Operations Technician · <span class="experience-company">OP mobility</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                    <div class="experience-info">
+                        <h3 class="experience-title">IT Infrastructure Operations Technician</h3>
+                        <span class="experience-company">OP mobility <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></span>
+                    </div>
                 </div>
                 <p class="experience-description">
                     SQL Database Administration
@@ -87,7 +91,10 @@
             <div class="experience-card">
                 <div class="experience-header">
                     <span class="experience-date">APR - SEP 2022</span>
-                    <h3 class="experience-title">Manufacturing Trainee <span class="experience-company">CERHAN - Audi Mexico</span> <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></h3>
+                    <div class="experience-info">
+                        <h3 class="experience-title">Manufacturing Trainee</h3>
+                        <span class="experience-company">CERHAN - Audi Mexico <span style="font-size: 0.8em; color: #A0AEC0;">↗</span></span>
+                    </div>
                 </div>
                 <p class="experience-description">
                     Development of Skills for the Operation of KUKA Robotic Cells
