--- a/css/about.css
+++ b/css/about.css
@@ -2,8 +2,15 @@
 #about {
     padding: 40px 0; /* Increase padding for more visual space */
     background-color: #081528; /* Ensure consistent background */
+    opacity: 0;
+    transform: translateY(20px); /* Empieza un poco abajo */
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
+body.loaded #about {
+    opacity: 1;
+    transform: translateY(0);
+}
 #about h2 {
     color: #61DAFB; /* Contrasting title color (cyan) */
     font-size: 2.5em; /* Larger font size for the title */
