--- a/css/carts.css
+++ b/css/carts.css
@@ -9,13 +9,16 @@
     border: 2px solid transparent;
     display: flex;
     flex-direction: column;
+    transition: background-color 0.3s ease, border 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease-in-out; /* Añadimos transición a la transformación */
+
 }
 
 .experience-card:hover {
     background-color: #1E293B;
     color: #CBD5E0;
     border: 2px solid #042d38;
-    box-shadow: 0 0 15px rgba(97, 218, 251, 0.2);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15); /* Sombra más pronunciada */
+    transform: translateY(-3px); /* Ligeramente hacia arriba */
 }
 
 .experience-header {
