--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
                     <div class="experience-tech-stack">
                         <span class="tech-badge">CISCO</span>
                         <span class="tech-badge">SQL</span>
-                        <span class="tech-badge">POWER BI</span>
+                        <span class="tech-badge">Power BI</span>
                         <span class="tech-badge">Azure AD</span>
                     </div>
                 </div>
