feature(cv) pdf

--- a/views/index.html
+++ b/views/index.html
@@ -130,6 +130,11 @@
                 <h2>Projects</h2>
                 <p>Listado de proyectos.</p>
             </section>
+            
+            <a href="/assets/resume.pdf" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+                <h2>View Full Resume</h2>
+            </a>
+            
             <section id="hobbies">
                 <h2>Hobbies</h2>
                 <p>Mis pasatiempos.</p>
